# AECE

./: .gitignore
FireWok/: CMakeLists.txt  main.cpp
FireWok/AECE/: AefFile.cpp  AefFile.h  AudioEvent.cpp  AudioEvent.hpp  CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp  PatternRenderer.cpp  PatternRenderer.hpp  SongWithAef.cpp  SongWithAef.h  typedefs.h
FireWok/AECE_tests/: CMakeLists.txt  testing.cpp
FireWok/AECE_tests/googletest/docs/: AdvancedGuide.md  V1_5_AdvancedGuide.md  V1_6_AdvancedGuide.md  V1_7_AdvancedGuide.md
FireWok/AECE_tests/units/: CMakeLists.txt  basic_check.cpp
FireWok/Songs/: Alan Walker - Fade.aef  Alan_Walker_Fade.aef  TestAef.aef
